# MAMMAL_mouse

./: .gitignore  CODEBASE_CLEANUP_PLAN.md  QUICKSTART.md  QUICK_START_LABELING.md  README.md  README_MONOCULAR.md  articulation_th.py  colormaps  compare_preprocessing.py  data_seaker_video_new.py  debug_pickle.py  download_superanimal.py  env_config.sh  environment_mammal_stable.yml  environment_mmpose.yml  extract_video_frames.py  fit_cropped_frames.py  fit_monocular.py  fit_silhouette_prototype.py  fitter_articulation.py  fix_inverted_masks.py  install_mammal_mouse.sh  manual.md  preprocess.py  requirements.txt  run_all_experiments.sh  run_experiment.sh  run_fitting.sh  run_keypoint_annotator.sh  run_mesh_fitting_cropped.sh  run_mesh_fitting_default.sh  run_mesh_fitting_monocular.sh  run_quick_test.sh  run_silhouette_experiments.sh  run_unified_annotator.sh  unified_annotator.py  utils.py
mammal_ext/: __init__.py  model_loader.py  pyproject.toml
mammal_ext/blender_export/: __init__.py  batch_export.py  coordinate_transform.py  obj_exporter.py  run_all.py  sequence_renderer.py
mammal_ext/config/: __init__.py  gpu.py  keypoint_weights.py  loss_weights.py
mammal_ext/fitting/: __init__.py  interpolation.py
mammal_ext/preprocessing/: __init__.py  dannce_to_yolo.py  mask_processing.py  sam_inference.py  silhouette_renderer.py  superanimal_detector.py  yolo_keypoint_detector.py
mammal_ext/uvmap/: __init__.py  evaluation_report.py  experiment_runner.py  optuna_optimizer.py  sweep_config.py  sweep_metrics.py  sweep_runner.py  texture_optimizer.py  uv_pipeline.py  (+2 more)
(+447 files in other folders)
